[project]
name = "h4b-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "gitingest>=0.1.4",
    "gunicorn>=23.0.0",
    "lxml>=5.3.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.1",
]
